# WesoForge

./: .gitignore  Architecture du projet.md  Architecture.md  Cargo.toml  README.md  setup.py
chiavdf/: README.md
chiavdf/mpir_gc_x64/proxy/: mpir.cpp
chiavdf/rust_bindings/: Cargo.toml
chiavdf/rust_bindings/src/: lib.rs
chiavdf/src/: Makefile.vdf-client  parameters.h  threading.h  vdf.h
crates/chiavdf-accel/: Cargo.toml  build.rs
crates/chiavdf-accel/kernels/cuda/: vdf_batch.cu
crates/chiavdf-accel/src/: dispatch.rs  error.rs  lib.rs
crates/chiavdf-accel/src/backends/: cpu.rs  mod.rs
crates/chiavdf-fast/: build.rs
crates/chiavdf-fast/native/: chiavdf_fast_fallback.cpp  chiavdf_fast_windows_stubs.cpp
crates/chiavdf-fast/src/: api.rs  ffi.rs  lib.rs
crates/client/: Cargo.toml  build.rs
crates/client-affinity/: Cargo.toml
crates/client-affinity/src/: lib.rs
crates/client-compute/: Cargo.toml
crates/client-compute/src/: lib.rs
crates/client-core/: Cargo.toml
crates/client-core/src/: file_logger.rs  lib.rs  logging.rs
crates/client-engine/: Cargo.toml
crates/client-engine/src/: api.rs  cpu_affinity.rs  cuda_backend.rs  engine.rs  gpu.rs  gpu_manager.rs  inflight.rs  lib.rs  opencl_backend.rs  pinning.rs  worker.rs
crates/client-gpu/: Cargo.toml
crates/client-gpu/src/: auto.rs  detect.rs  error.rs  execute.rs  lib.rs
crates/client-gpu/src/cuda/: compute.rs  kernels.ptx  mod.rs
crates/client-gpu/src/opencl/: compute.rs  mod.rs
crates/client-gpu/tests/: cuda_bigint.rs
crates/client-gui/: Cargo.toml  build.rs
crates/client-gui/src/: main.rs
crates/client/src/: bench.rs  cli.rs  format.rs  main.rs  shutdown.rs  terminal.rs
crates/cuda-runtime/: Cargo.toml  build.rs
crates/cuda-runtime/kernels/: vdf.cu
crates/cuda-runtime/src/: lib.rs  vdf.ptx  vdf_fallback.ptx
docs/: windows-fast-path.md
scripts/: Cargo_test.ps1  build-cli.ps1  build-cli.sh  build-gui.ps1  build-gui.sh  dev_gui.sh  dev_gui_server.sh
ui/: package.json
ui/src/: App.svelte
