[package]
name = "bbr-client-chiavdf-accel"
version = "0.1.0"
edition = "2021"

[lib]
name = "bbr_client_chiavdf_accel"
path = "src/lib.rs"

[features]
default = []
cpu = []
cuda = []
opencl = []

[dependencies]
thiserror = "2"
# CPU dependency (your existing crate):
bbr-client-chiavdf-fast = { package = "bbr-client-chiavdf-fast", path = "../chiavdf-fast", default-features = false, optional = true }

[build-dependencies]
cc = "1.2"
