[package]
name = "bbr-client-engine"
version.workspace = true
edition.workspace = true

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

bbr-client-chiavdf-fast = { path = "../chiavdf-fast" }
bbr-client-core = { path = "../client-core" }

# Optional GPU backend crate (CUDA / OpenCL live there)
bbr-client-gpu = { path = "../client-gpu", optional = true, default-features = false }

[features]
default = []

# Forward GPU features to the GPU crate
cuda = ["dep:bbr-client-gpu", "bbr-client-gpu/cuda"]
opencl = ["dep:bbr-client-gpu", "bbr-client-gpu/opencl"]

# Convenience meta-feature
gpu = ["cuda", "opencl"]
