[package]
name = "bbr-client-engine"
version.workspace = true
edition.workspace = true

[features]
# Enable CUDA probing/usage through the compute facade.
cuda = ["bbr-client-compute/cuda"]
# Enable OpenCL probing/usage through the compute facade.
opencl = ["bbr-client-compute/opencl"]
# Convenience umbrella feature.
gpu = ["cuda", "opencl"]

[dependencies]
anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

bbr-client-affinity = { path = "../client-affinity" }
bbr-client-chiavdf-fast = { path = "../chiavdf-fast" }
bbr-client-compute = { path = "../client-compute" }
bbr-client-core = { path = "../client-core" }
