[package]
name = "bbr-client-gpu"
version.workspace = true
edition.workspace = true

[features]
# Enable NVIDIA CUDA backend (driver API via dynamic loading).
cuda = []
# Enable OpenCL backend (dynamic loading).
opencl = []

[dependencies]
anyhow = { workspace = true }
libloading = { workspace = true }
bbr-client-core = { path = "../client-core" }
bbr-client-chiavdf-fast = { path = "../chiavdf-fast" }
